// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.push;
option go_package = "github.com/bucketeer-io/bucketeer/proto/push";

message Push {
  string id = 1;
  string fcm_api_key = 2;
  repeated string tags = 3;
  bool deleted = 4;
  string name = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
